--- a/style.css
+++ b/style.css
@@ -70,10 +70,11 @@ font-size: 60px;
     font-weight: 600;
     
     /* display: inline-block;  */
-    height: 600px;
+    height: 800px;
     border-radius: 10px;
     vertical-align: top;
     flex-grow: 1;
+    flex-wrap: wrap;
 }
 .section-four
 {
@@ -81,10 +82,11 @@ font-size: 60px;
     color: black;
     padding: 20px;
     /* display: inline-block;  */
-    height: 600px;
+    height: 800px;
     border-radius: 10px;
     vertical-align: top;
-    flex-grow: 2;
+    flex-grow: 1;
+    flex-wrap: wrap;
 }
 .sec-container
 {
